# claude-pilot-free

./: .coderabbit.yaml  .gitattributes  .gitignore  .mcp-funnel.json  .mcp.json  .releaserc.json  CHANGELOG.md  CLAUDE.local.md  LICENSE  README.md  install.sh  pyproject.toml
.claude/: settings.local.json  settings.local.template.json
.claude/commands/: implement.md  plan.md  setup.md  spec.md  verify.md
.claude/hooks/: context_monitor.py  file-checker.sh  file_checker_python.sh  file_checker_qlty.sh
.claude/plugin/hooks/: context_monitor.py
.claude/plugin/scripts/: worker-wrapper.cjs
.claude/rules/: builder.py  config.yaml  git-commits.md  project.md
.claude/rules/core/: code-review.md  coding-standards.md  context-management.md  error-handling.md  execution-verification.md  git-operations.md  mcp-tools.md  project-conventions.md  python-tooling.md  tdd-enforcement.md  testing-strategies.md  validation.md
.claude/rules/extended/: backend-api.md  backend-migrations.md  backend-models.md  backend-queries.md  frontend-accessibility.md  frontend-components.md  frontend-css.md  frontend-responsive.md  testing-anti-patterns.md  testing-debugging.md  testing-final-verification.md  testing-test-writing.md
.claude/rules/standard/: context-continuation.md  semantic-code-search.md
.claude/rules/workflow/: implement.md  plan.md  quick.md  remember.md  verify.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-approve.yml  claude.yml  deploy-website.yml  pr-lint.yml  quality.yml  release-dev.yml  release.yml  sync-upstream.yml
.qlty/: qlty.toml
ccp/: __init__.py  auth.py  build.py  updater.py  wrapper.py
ccp/auditor/: runner.py
ccp/statusline/: providers.py
ccp/tests/unit/: test_build.py  test_tool_redirect.py  test_updater.py
console/: package.json
console/src/cli/: hook-command.ts  stdin-reader.ts
console/src/services/: worker-service.ts
console/tests/cli/: hook-command-failopen.test.ts  stdin-reader-timeout.test.ts
console/tests/sqlite/: migration-fk-safety.test.ts  observation-type-constraint.test.ts
console/tests/ui/: dashboard-project-filter.test.ts  memories-project-filter.test.ts  project-context.test.ts  project-selector.test.ts  scope-badge.test.ts  search-project-filter.test.ts  sessions-project-filter.test.ts  terminal-preview-xss.test.ts  use-stats-project.test.ts
console/tests/worker/: license-routes.test.ts  middleware-cors.test.ts  middleware-ordering.test.ts  stats-project-filter.test.ts
docs/site/: .env.development  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json
docs/site/public/: manifest.json
docs/site/src/: index.css
installer/: __init__.py  cli.py  config.py  ui.py
installer/steps/: claude_files.py  config_files.py  dependencies.py  environment.py  finalize.py  git_setup.py  migration.py  premium.py  shell_config.py
installer/tests/unit/: test_cli.py  test_cli_wrapper.py  test_config.py  test_errors.py  test_install_sh.py
launcher/: __init__.py  __main__.py  analytics.py  auth.py  banner.py  build.py  claude_installer.py  cli.py  config.py  gumroad.py  helper.py  services.py  trial.py  updater.py  utils.py  wrapper.py
launcher/statusline/: __init__.py  __main__.py  formatter.py  providers.py  tips.py  widgets.py
launcher/tests/: conftest.py
launcher/tests/integration/: __init__.py  test_license_flow.py
launcher/tests/unit/: __init__.py  conftest.py  test_analytics.py  test_auth.py  test_build.py  test_claude_installer.py  test_cli.py  test_helper.py  (+7 more)
pilot/: .lsp.json  .mcp.json  package.json  plugin.json  settings.json
pilot/agents/: plan-verifier.md  spec-verifier.md
pilot/commands/: learn.md  spec-implement.md  spec-plan.md  spec-verify.md  spec.md  sync.md
pilot/hooks/: context_monitor.py  file_checker_go.py  file_checker_python.py  file_checker_ts.py  hooks.json  spec_stop_guard.py  tdd_enforcer.py  tool_redirect.py
pilot/modes/: code.json
pilot/rules/: agent-browser.md  coding-standards.md  context-continuation.md  context7-docs.md  execution-verification.md  gh-cli.md  git-operations.md  golang-rules.md  learn.md  mcp-cli.md  memory.md  playwright-cli.md  python-rules.md  systematic-debugging.md  tdd-enforcement.md  testing-strategies-coverage.md  typescript-rules.md  verification-before-completion.md  vexor-search.md  web-search.md  workflow-enforcement.md
pilot/scripts/: context-generator.cjs  mcp-server.cjs  worker-service.cjs
pilot/ui/: index.html  viewer-bundle.js  viewer.css  viewer.html
premium/: build_cicd.py  build_local.py  pyproject.toml
premium/tests/: test_cli.py  test_context_monitor.py  test_license.py  test_rules_supervisor.py  test_rules_supervisor_hook.py  test_tdd_enforcer.py
scripts/: build-rules.sh  install.py  install.sh  release.sh
scripts/lib/: download.sh  git_setup.py  premium.py  setup-env.sh  shell_config.py
tests/e2e/: test-build-rules.sh  test-install.sh
tests/integration/: test_license_flow.py
tests/unit/: test_install_sh.py
(+89 files in other folders)
